@@ -193,6 +193,15 @@ def sort_by_debrid_provider(list_, reverse):
 
 
 def sort_by_source_type(list_, reverse):
+    def source_type_key(item):
+        if item['type'] == 'torrent':
+            return 0
+        elif item['type'] == 'torrent (uncached)':
+            return 1
+        else:
+            return 2
+
+    list_.sort(key=source_type_key)
     for i in range(len(SORT_OPTIONS['source type']), 0, -1):
         list_.sort(key=lambda x: x['type'] in source_type[int(sort_options[f'source type.{i}'])], reverse=reverse)
     return list_
