@@ -1,3 +1,7 @@
+Changelog v5.1.60 (2024-02-08):
+- Fixed Small bug with Torrents
+- Changed Sync Setting Default
+
 Changelog v5.1.59 (2024-02-05):
 - Fixed Autoplay for Embeds
 
